# griot-math-pypi

./: .gitignore  AGENT.md  README.md  pyproject.toml
src/griot_math.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/griotmath/: __init__.py  call_response.py  federation.py  genealogy.py  memory.py  praise.py
tests/: test_all.py
